WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296039
[SQLite] PRAGMA incrementalVacuum does not work
https://bugs.webkit.org/show_bug.cgi?id=296039
Summary
[SQLite] PRAGMA incrementalVacuum does not work
Przemyslaw Gorszkowski
Reported
2025-07-16 01:10:03 PDT
PRAGMA incrementalVacuum does not work because it is multi-step PRAGMA(multiple steps which return SQLITE_ROW) and in SQLiteDatabase::runIncrementalVacuumCommand it is treated as single-step (the expected return is SQLITE_DONE). I couldn't find direct information about that in documentation of SQLite except one sentence in `sqlite3_data_count`(
https://www.sqlite.org/c3ref/data_count.html
) description: "... except in the case of the PRAGMA incremental_vacuum where it always returns zero since each step of that multi-step pragma returns 0 columns of data.". I tested it and confirmed by adding "incrementalVacuum" functionality for IndexedDB. The original fix is:
https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1532
- it includes: adding "incrementalVacuum" functionality for IndexedDB and fix for "PRAGMA incrementalVacuum". I would like to add fix for "PRAGMA incrementalVacuum" first and then separately adding "incrementalVacuum" functionality to IndexedDB.
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2025-07-16 02:10:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48110
EWS
Comment 2
2025-07-16 23:20:29 PDT
Committed
297509@main
(8c824fc262b7): <
https://commits.webkit.org/297509@main
> Reviewed commits have been landed. Closing PR #48110 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-07-16 23:23:23 PDT
<
rdar://problem/156031707
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug