[SQLite] PRAGMA incrementalVacuum does not work https://bugs.webkit.org/show_bug.cgi?id=296039

Reviewed by Sihui Liu.

Without this change 'runIncrementalVacuumCommand' does not work because
'PRAGMA incrementalVacuum' is multi-step pragma.

There is no direct information about that in documentation of SQLite except
one sentence in 'sqlite3_data_count'(https://www.sqlite.org/c3ref/data_count.html)
description: '... except in the case of the PRAGMA incremental_vacuum where it
always returns zero since each step of that multi-step pragma returns 0 columns of data.'.

To fix this, 'runIncrementalVacuumCommand' has to handle multiple calls
of 'step' with expected SQLITE_ROW.

Original author: filipe-norte-red
See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1532

* Source/WebCore/platform/sql/SQLiteDatabase.cpp:
(WebCore::SQLiteDatabase::runIncrementalVacuumCommand):

Canonical link: https://commits.webkit.org/297509@main